25.4.1/_sources/core/api/conversation.rst.txt
Conversations
=============

Conversation & Messages
-----------------------

.. _conversation:
.. autoclass:: wayflowcore.conversation.Conversation

.. _message:
.. autoclass:: wayflowcore.messagelist.Message

.. _messagetype:
.. autoclass:: wayflowcore.messagelist.MessageType

.. _textcontent:
.. autoclass:: wayflowcore.messagelist.TextContent
   :noindex:

.. _imagecontent:
.. autoclass:: wayflowcore.messagelist.ImageContent
   :noindex:

.. _messagelist:
.. autoclass:: wayflowcore.messagelist.MessageList



ExecutionStatus
---------------

.. _executionstatus:
.. autoclass:: wayflowcore.executors.executionstatus.ExecutionStatus

.. _usermessagerequesttatus:
.. autoclass:: wayflowcore.executors.executionstatus.UserMessageRequestStatus

.. _finishedexecutionstatus:
.. autoclass:: wayflowcore.executors.executionstatus.FinishedStatus

.. _toolrequestexecutionstatus:
.. autoclass:: wayflowcore.executors.executionstatus.ToolRequestStatus






Conversation
------------

Base class for conversations. Can manipulate a conversation object, and can be serialized/deserialized.

.. _conversationalcomponent:
.. autoclass:: wayflowcore.conversationalcomponent.ConversationalComponent
