26.1.0/_sources/core/api/conversation.rst.txt
Conversations
=============

Messages
--------

.. _message:
.. autoclass:: wayflowcore.messagelist.Message

.. _messagetype:
.. autoclass:: wayflowcore.messagelist.MessageType

.. _messagecontent:
.. autoclass:: wayflowcore.messagelist.MessageContent

.. _textcontent:
.. autoclass:: wayflowcore.messagelist.TextContent

.. _imagecontent:
.. autoclass:: wayflowcore.messagelist.ImageContent

.. _messagelist:
.. autoclass:: wayflowcore.messagelist.MessageList

ExecutionStatus
---------------

.. _executionstatus:
.. autoclass:: wayflowcore.executors.executionstatus.ExecutionStatus

.. _usermessagerequesttatus:
.. autoclass:: wayflowcore.executors.executionstatus.UserMessageRequestStatus

.. _finishedexecutionstatus:
.. autoclass:: wayflowcore.executors.executionstatus.FinishedStatus

.. _toolrequestexecutionstatus:
.. autoclass:: wayflowcore.executors.executionstatus.ToolRequestStatus

Conversation
------------

Base class for conversations. Can manipulate a conversation object, and can be serialized/deserialized.

.. _conversationalcomponent:
.. autoclass:: wayflowcore.conversationalcomponent.ConversationalComponent

.. _conversation:
.. autoclass:: wayflowcore.conversation.Conversation

Execution Plan
--------------

.. autoclass:: wayflowcore.planning.ExecutionPlan

.. autoclass:: wayflowcore.planning.Task

.. autoclass:: wayflowcore.planning.TaskStatus
